# chatmcp_memory

./: Makefile  README.md  pyproject.toml  requirements.txt
doc/: schema.sql
src/chatmcp_memory/: __main__.py  dto.py  remember.py
