[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chatmcp_memory"]

[project]
name            = "chatmcp_memory"
version         = "0.0.7"
description     = "An MCP server able to give large language models the power to remember."
readme          = "README.md"
license         = {text = "MIT"}
authors         = [{name = "vearne", email = "asdwoshiaotian@gmail.com"}]
requires-python = ">=3.8"
dependencies    = [
    "fastmcp==2.10.5",
    "pydantic==2.11.7",
]

[project.scripts]
chatmcp_memory = "chatmcp_memory.__main__:main"

[project.urls]
Homepage = "https://github.com/vearne/chatmcp_memory"

